change the file to index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                 <img src="./IMG-20250614-WA0014.jpg" alt="Jinesh Bora" class="profile-photo-circular">     
+                 <img src="./img/IMG-20250614-WA0014.jpg" alt="Jinesh Bora" class="profile-photo-circular">     
                 </div>
             </div>
         </div>
